--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Poul0s#8358",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
-    "lowdb": "^1.0.0"
+    "lowdb": "^1.0.0",
+    "ms": "^2.1.1"
   }
 }
