--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-binaries": "^4.0.0",
+    "fs": "0.0.1-security",
     "lowdb": "^1.0.0",
-    "ms": "^2.1.1"
+    "ms": "^2.1.1",
+    "ytdl-core": "^0.25.0"
   }
 }
